Trabalho 3/expr.output
Grammar

    0 $accept: Inicio $end

    1 Inicio: ListFuncoes BlocoPrincipal
    2       | BlocoPrincipal

    3 ListFuncoes: ListFuncoes Funcao
    4            | Funcao

    5 Funcao: TipoRetorno TID TAPAR DeclParametros TFPAR BlocoPrincipal
    6       | TipoRetorno TID TAPAR TFPAR BlocoPrincipal

    7 TipoRetorno: Tipo
    8            | TVOID

    9 DeclParametros: DeclParametros TCOMA Parametro
   10               | Parametro

   11 Parametro: Tipo TID

   12 BlocoPrincipal: TACHA Declaracoes ListCmd TFCHA
   13               | TACHA ListCmd TFCHA

   14 Declaracoes: Declaracoes Declaracao
   15            | Declaracao

   16 Declaracao: Tipo ListId TDOTCOMA

   17 Tipo: TINT
   18     | TSTRING

   19 ListId: ListId TCOMA TID
   20       | TID

   21 Bloco: TACHA ListCmd TFCHA

   22 ListCmd: ListCmd Comando
   23        | Comando

   24 Comando: CmdSe
   25        | CmdEnquanto
   26        | CmdAtrib
   27        | CmdEscrita
   28        | CmdIncrementa
   29        | CmdDecrementa
   30        | CmdLeitura
   31        | ChamadaFuncao
   32        | Retorno

   33 Retorno: TRETURN ExpressaoAritmetica TDOTCOMA

   34 CmdSe: TIF TAPAR ExpressaoLogica TFPAR M Bloco
   35      | TIF TAPAR ExpressaoLogica TFPAR M Bloco TELSE Bloco

   36 CmdEnquanto: TWHILE TAPAR ExpressaoLogica TFPAR Bloco
   37            | TDO Bloco TWHILE TAPAR ExpressaoLogica TFPAR TDOTCOMA

   38 CmdAtrib: TID TATR ExpressaoAritmetica TDOTCOMA

   39 $@1: %empty

   40 CmdAtrib: TID TADD TATR $@1 ExpressaoAritmetica TDOTCOMA
   41         | TID TATR TLITERAL TDOTCOMA
   42         | TID TATR ChamadaFuncao

   43 CmdEscrita: TPRINT P TAPAR Tipagem TFPAR TDOTCOMA

   44 CmdIncrementa: TID TADD TADD TDOTCOMA

   45 CmdDecrementa: TID TSUB TSUB TDOTCOMA

   46 CmdLeitura: TREAD TAPAR TID TFPAR TDOTCOMA

   47 ChamadaFuncao: TID TAPAR ListParametros TFPAR TDOTCOMA
   48              | TID TAPAR TFPAR TDOTCOMA

   49 ListParametros: ListParametros TCOMA ExpressaoAritmetica
   50               | ExpressaoAritmetica

   51 ExpressaoAritmetica: ExpressaoAritmetica TADD Termo
   52                    | ExpressaoAritmetica TSUB Termo
   53                    | Termo

   54 Termo: Termo TMUL Fator
   55      | Termo TDIV Fator
   56      | Fator

   57 Fator: TID
   58      | TAPAR ExpressaoAritmetica TFPAR
   59      | TSUB Fator
   60      | TNUM

   61 ExpressaoRelacional: ExpressaoAritmetica TBIG ExpressaoAritmetica
   62                    | ExpressaoAritmetica TSMALL ExpressaoAritmetica
   63                    | ExpressaoAritmetica TBIGEQUAL ExpressaoAritmetica
   64                    | ExpressaoAritmetica TSMALLEQUAL ExpressaoAritmetica
   65                    | ExpressaoAritmetica TEQUAL ExpressaoAritmetica
   66                    | ExpressaoAritmetica TNEQUAL ExpressaoAritmetica

   67 ExpressaoLogica: ExpressaoLogica TAND M TermoLogico
   68                | ExpressaoLogica TOR M TermoLogico
   69                | TermoLogico

   70 TermoLogico: TNOT TermoLogico
   71            | TAPAR ExpressaoLogica TFPAR
   72            | ExpressaoRelacional

   73 M: %empty

   74 Tipagem: ExpressaoAritmetica
   75        | TLITERAL

   76 P: %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
TADD (258) 40 44 51
TMUL (259) 54
TSUB (260) 45 52 59
TDIV (261) 55
TAPAR (262) 5 6 34 35 36 37 43 46 47 48 58 71
TFPAR (263) 5 6 34 35 36 37 43 46 47 48 58 71
TAND (264) 67
TOR (265) 68
TNOT (266) 70
TEQUAL (267) 65
TNEQUAL (268) 66
TBIG (269) 61
TSMALL (270) 62
TBIGEQUAL (271) 63
TSMALLEQUAL (272) 64
TIF (273) 34 35
TELSE (274) 35
TWHILE (275) 36 37
TRETURN (276) 33
TLITERAL (277) 41 75
TSTRING (278) 18
TINT (279) 17
TVOID (280) 8
TREAD (281) 46
TPRINT (282) 43
TDOTCOMA (283) 16 33 37 38 40 41 43 44 45 46 47 48
TCOMA (284) 9 19 49
TACHA (285) 12 13 21
TFCHA (286) 12 13 21
TATR (287) 38 40 41 42
TID (288) 5 6 11 19 20 38 40 41 42 44 45 46 47 48 57
TNUM (289) 60
TDO (290) 37


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
Inicio (37)
    on left: 1 2, on right: 0
ListFuncoes (38)
    on left: 3 4, on right: 1 3
Funcao (39)
    on left: 5 6, on right: 3 4
TipoRetorno (40)
    on left: 7 8, on right: 5 6
DeclParametros (41)
    on left: 9 10, on right: 5 9
Parametro (42)
    on left: 11, on right: 9 10
BlocoPrincipal (43)
    on left: 12 13, on right: 1 2 5 6
Declaracoes (44)
    on left: 14 15, on right: 12 14
Declaracao (45)
    on left: 16, on right: 14 15
Tipo (46)
    on left: 17 18, on right: 7 11 16
ListId (47)
    on left: 19 20, on right: 16 19
Bloco (48)
    on left: 21, on right: 34 35 36 37
ListCmd (49)
    on left: 22 23, on right: 12 13 21 22
Comando (50)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23
Retorno (51)
    on left: 33, on right: 32
CmdSe (52)
    on left: 34 35, on right: 24
CmdEnquanto (53)
    on left: 36 37, on right: 25
CmdAtrib (54)
    on left: 38 40 41 42, on right: 26
$@1 (55)
    on left: 39, on right: 40
CmdEscrita (56)
    on left: 43, on right: 27
CmdIncrementa (57)
    on left: 44, on right: 28
CmdDecrementa (58)
    on left: 45, on right: 29
CmdLeitura (59)
    on left: 46, on right: 30
ChamadaFuncao (60)
    on left: 47 48, on right: 31 42
ListParametros (61)
    on left: 49 50, on right: 47 49
ExpressaoAritmetica (62)
    on left: 51 52 53, on right: 33 38 40 49 50 51 52 58 61 62 63 64
    65 66 74
Termo (63)
    on left: 54 55 56, on right: 51 52 53 54 55
Fator (64)
    on left: 57 58 59 60, on right: 54 55 56 59
ExpressaoRelacional (65)
    on left: 61 62 63 64 65 66, on right: 72
ExpressaoLogica (66)
    on left: 67 68 69, on right: 34 35 36 37 67 68 71
TermoLogico (67)
    on left: 70 71 72, on right: 67 68 69 70
M (68)
    on left: 73, on right: 34 35 67 68
Tipagem (69)
    on left: 74 75, on right: 43
P (70)
    on left: 76, on right: 43


State 0

    0 $accept: . Inicio $end

    TSTRING  shift, and go to state 1
    TINT     shift, and go to state 2
    TVOID    shift, and go to state 3
    TACHA    shift, and go to state 4

    Inicio          go to state 5
    ListFuncoes     go to state 6
    Funcao          go to state 7
    TipoRetorno     go to state 8
    BlocoPrincipal  go to state 9
    Tipo            go to state 10


State 1

   18 Tipo: TSTRING .

    $default  reduce using rule 18 (Tipo)


State 2

   17 Tipo: TINT .

    $default  reduce using rule 17 (Tipo)


State 3

    8 TipoRetorno: TVOID .

    $default  reduce using rule 8 (TipoRetorno)


State 4

   12 BlocoPrincipal: TACHA . Declaracoes ListCmd TFCHA
   13               | TACHA . ListCmd TFCHA

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TSTRING  shift, and go to state 1
    TINT     shift, and go to state 2
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    Declaracoes    go to state 18
    Declaracao     go to state 19
    Tipo           go to state 20
    ListCmd        go to state 21
    Comando        go to state 22
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 5

    0 $accept: Inicio . $end

    $end  shift, and go to state 32


State 6

    1 Inicio: ListFuncoes . BlocoPrincipal
    3 ListFuncoes: ListFuncoes . Funcao

    TSTRING  shift, and go to state 1
    TINT     shift, and go to state 2
    TVOID    shift, and go to state 3
    TACHA    shift, and go to state 4

    Funcao          go to state 33
    TipoRetorno     go to state 8
    BlocoPrincipal  go to state 34
    Tipo            go to state 10


State 7

    4 ListFuncoes: Funcao .

    $default  reduce using rule 4 (ListFuncoes)


State 8

    5 Funcao: TipoRetorno . TID TAPAR DeclParametros TFPAR BlocoPrincipal
    6       | TipoRetorno . TID TAPAR TFPAR BlocoPrincipal

    TID  shift, and go to state 35


State 9

    2 Inicio: BlocoPrincipal .

    $default  reduce using rule 2 (Inicio)


State 10

    7 TipoRetorno: Tipo .

    $default  reduce using rule 7 (TipoRetorno)


State 11

   34 CmdSe: TIF . TAPAR ExpressaoLogica TFPAR M Bloco
   35      | TIF . TAPAR ExpressaoLogica TFPAR M Bloco TELSE Bloco

    TAPAR  shift, and go to state 36


State 12

   36 CmdEnquanto: TWHILE . TAPAR ExpressaoLogica TFPAR Bloco

    TAPAR  shift, and go to state 37


State 13

   33 Retorno: TRETURN . ExpressaoAritmetica TDOTCOMA

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 42
    Termo                go to state 43
    Fator                go to state 44


State 14

   46 CmdLeitura: TREAD . TAPAR TID TFPAR TDOTCOMA

    TAPAR  shift, and go to state 45


State 15

   43 CmdEscrita: TPRINT . P TAPAR Tipagem TFPAR TDOTCOMA

    $default  reduce using rule 76 (P)

    P  go to state 46


State 16

   38 CmdAtrib: TID . TATR ExpressaoAritmetica TDOTCOMA
   40         | TID . TADD TATR $@1 ExpressaoAritmetica TDOTCOMA
   41         | TID . TATR TLITERAL TDOTCOMA
   42         | TID . TATR ChamadaFuncao
   44 CmdIncrementa: TID . TADD TADD TDOTCOMA
   45 CmdDecrementa: TID . TSUB TSUB TDOTCOMA
   47 ChamadaFuncao: TID . TAPAR ListParametros TFPAR TDOTCOMA
   48              | TID . TAPAR TFPAR TDOTCOMA

    TADD   shift, and go to state 47
    TSUB   shift, and go to state 48
    TAPAR  shift, and go to state 49
    TATR   shift, and go to state 50


State 17

   37 CmdEnquanto: TDO . Bloco TWHILE TAPAR ExpressaoLogica TFPAR TDOTCOMA

    TACHA  shift, and go to state 51

    Bloco  go to state 52


State 18

   12 BlocoPrincipal: TACHA Declaracoes . ListCmd TFCHA
   14 Declaracoes: Declaracoes . Declaracao

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TSTRING  shift, and go to state 1
    TINT     shift, and go to state 2
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    Declaracao     go to state 53
    Tipo           go to state 20
    ListCmd        go to state 54
    Comando        go to state 22
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 19

   15 Declaracoes: Declaracao .

    $default  reduce using rule 15 (Declaracoes)


State 20

   16 Declaracao: Tipo . ListId TDOTCOMA

    TID  shift, and go to state 55

    ListId  go to state 56


State 21

   13 BlocoPrincipal: TACHA ListCmd . TFCHA
   22 ListCmd: ListCmd . Comando

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TFCHA    shift, and go to state 57
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    Comando        go to state 58
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 22

   23 ListCmd: Comando .

    $default  reduce using rule 23 (ListCmd)


State 23

   32 Comando: Retorno .

    $default  reduce using rule 32 (Comando)


State 24

   24 Comando: CmdSe .

    $default  reduce using rule 24 (Comando)


State 25

   25 Comando: CmdEnquanto .

    $default  reduce using rule 25 (Comando)


State 26

   26 Comando: CmdAtrib .

    $default  reduce using rule 26 (Comando)


State 27

   27 Comando: CmdEscrita .

    $default  reduce using rule 27 (Comando)


State 28

   28 Comando: CmdIncrementa .

    $default  reduce using rule 28 (Comando)


State 29

   29 Comando: CmdDecrementa .

    $default  reduce using rule 29 (Comando)


State 30

   30 Comando: CmdLeitura .

    $default  reduce using rule 30 (Comando)


State 31

   31 Comando: ChamadaFuncao .

    $default  reduce using rule 31 (Comando)


State 32

    0 $accept: Inicio $end .

    $default  accept


State 33

    3 ListFuncoes: ListFuncoes Funcao .

    $default  reduce using rule 3 (ListFuncoes)


State 34

    1 Inicio: ListFuncoes BlocoPrincipal .

    $default  reduce using rule 1 (Inicio)


State 35

    5 Funcao: TipoRetorno TID . TAPAR DeclParametros TFPAR BlocoPrincipal
    6       | TipoRetorno TID . TAPAR TFPAR BlocoPrincipal

    TAPAR  shift, and go to state 59


State 36

   34 CmdSe: TIF TAPAR . ExpressaoLogica TFPAR M Bloco
   35      | TIF TAPAR . ExpressaoLogica TFPAR M Bloco TELSE Bloco

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 60
    TNOT   shift, and go to state 61
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 62
    Termo                go to state 43
    Fator                go to state 44
    ExpressaoRelacional  go to state 63
    ExpressaoLogica      go to state 64
    TermoLogico          go to state 65


State 37

   36 CmdEnquanto: TWHILE TAPAR . ExpressaoLogica TFPAR Bloco

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 60
    TNOT   shift, and go to state 61
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 62
    Termo                go to state 43
    Fator                go to state 44
    ExpressaoRelacional  go to state 63
    ExpressaoLogica      go to state 66
    TermoLogico          go to state 65


State 38

   59 Fator: TSUB . Fator

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    Fator  go to state 67


State 39

   58 Fator: TAPAR . ExpressaoAritmetica TFPAR

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 68
    Termo                go to state 43
    Fator                go to state 44


State 40

   57 Fator: TID .

    $default  reduce using rule 57 (Fator)


State 41

   60 Fator: TNUM .

    $default  reduce using rule 60 (Fator)


State 42

   33 Retorno: TRETURN ExpressaoAritmetica . TDOTCOMA
   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo

    TADD      shift, and go to state 69
    TSUB      shift, and go to state 70
    TDOTCOMA  shift, and go to state 71


State 43

   53 ExpressaoAritmetica: Termo .
   54 Termo: Termo . TMUL Fator
   55      | Termo . TDIV Fator

    TMUL  shift, and go to state 72
    TDIV  shift, and go to state 73

    $default  reduce using rule 53 (ExpressaoAritmetica)


State 44

   56 Termo: Fator .

    $default  reduce using rule 56 (Termo)


State 45

   46 CmdLeitura: TREAD TAPAR . TID TFPAR TDOTCOMA

    TID  shift, and go to state 74


State 46

   43 CmdEscrita: TPRINT P . TAPAR Tipagem TFPAR TDOTCOMA

    TAPAR  shift, and go to state 75


State 47

   40 CmdAtrib: TID TADD . TATR $@1 ExpressaoAritmetica TDOTCOMA
   44 CmdIncrementa: TID TADD . TADD TDOTCOMA

    TADD  shift, and go to state 76
    TATR  shift, and go to state 77


State 48

   45 CmdDecrementa: TID TSUB . TSUB TDOTCOMA

    TSUB  shift, and go to state 78


State 49

   47 ChamadaFuncao: TID TAPAR . ListParametros TFPAR TDOTCOMA
   48              | TID TAPAR . TFPAR TDOTCOMA

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TFPAR  shift, and go to state 79
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ListParametros       go to state 80
    ExpressaoAritmetica  go to state 81
    Termo                go to state 43
    Fator                go to state 44


State 50

   38 CmdAtrib: TID TATR . ExpressaoAritmetica TDOTCOMA
   41         | TID TATR . TLITERAL TDOTCOMA
   42         | TID TATR . ChamadaFuncao

    TSUB      shift, and go to state 38
    TAPAR     shift, and go to state 39
    TLITERAL  shift, and go to state 82
    TID       shift, and go to state 83
    TNUM      shift, and go to state 41

    ChamadaFuncao        go to state 84
    ExpressaoAritmetica  go to state 85
    Termo                go to state 43
    Fator                go to state 44


State 51

   21 Bloco: TACHA . ListCmd TFCHA

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    ListCmd        go to state 86
    Comando        go to state 22
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 52

   37 CmdEnquanto: TDO Bloco . TWHILE TAPAR ExpressaoLogica TFPAR TDOTCOMA

    TWHILE  shift, and go to state 87


State 53

   14 Declaracoes: Declaracoes Declaracao .

    $default  reduce using rule 14 (Declaracoes)


State 54

   12 BlocoPrincipal: TACHA Declaracoes ListCmd . TFCHA
   22 ListCmd: ListCmd . Comando

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TFCHA    shift, and go to state 88
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    Comando        go to state 58
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 55

   20 ListId: TID .

    $default  reduce using rule 20 (ListId)


State 56

   16 Declaracao: Tipo ListId . TDOTCOMA
   19 ListId: ListId . TCOMA TID

    TDOTCOMA  shift, and go to state 89
    TCOMA     shift, and go to state 90


State 57

   13 BlocoPrincipal: TACHA ListCmd TFCHA .

    $default  reduce using rule 13 (BlocoPrincipal)


State 58

   22 ListCmd: ListCmd Comando .

    $default  reduce using rule 22 (ListCmd)


State 59

    5 Funcao: TipoRetorno TID TAPAR . DeclParametros TFPAR BlocoPrincipal
    6       | TipoRetorno TID TAPAR . TFPAR BlocoPrincipal

    TFPAR    shift, and go to state 91
    TSTRING  shift, and go to state 1
    TINT     shift, and go to state 2

    DeclParametros  go to state 92
    Parametro       go to state 93
    Tipo            go to state 94


State 60

   58 Fator: TAPAR . ExpressaoAritmetica TFPAR
   71 TermoLogico: TAPAR . ExpressaoLogica TFPAR

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 60
    TNOT   shift, and go to state 61
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 95
    Termo                go to state 43
    Fator                go to state 44
    ExpressaoRelacional  go to state 63
    ExpressaoLogica      go to state 96
    TermoLogico          go to state 65


State 61

   70 TermoLogico: TNOT . TermoLogico

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 60
    TNOT   shift, and go to state 61
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 62
    Termo                go to state 43
    Fator                go to state 44
    ExpressaoRelacional  go to state 63
    TermoLogico          go to state 97


State 62

   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo
   61 ExpressaoRelacional: ExpressaoAritmetica . TBIG ExpressaoAritmetica
   62                    | ExpressaoAritmetica . TSMALL ExpressaoAritmetica
   63                    | ExpressaoAritmetica . TBIGEQUAL ExpressaoAritmetica
   64                    | ExpressaoAritmetica . TSMALLEQUAL ExpressaoAritmetica
   65                    | ExpressaoAritmetica . TEQUAL ExpressaoAritmetica
   66                    | ExpressaoAritmetica . TNEQUAL ExpressaoAritmetica

    TADD         shift, and go to state 69
    TSUB         shift, and go to state 70
    TEQUAL       shift, and go to state 98
    TNEQUAL      shift, and go to state 99
    TBIG         shift, and go to state 100
    TSMALL       shift, and go to state 101
    TBIGEQUAL    shift, and go to state 102
    TSMALLEQUAL  shift, and go to state 103


State 63

   72 TermoLogico: ExpressaoRelacional .

    $default  reduce using rule 72 (TermoLogico)


State 64

   34 CmdSe: TIF TAPAR ExpressaoLogica . TFPAR M Bloco
   35      | TIF TAPAR ExpressaoLogica . TFPAR M Bloco TELSE Bloco
   67 ExpressaoLogica: ExpressaoLogica . TAND M TermoLogico
   68                | ExpressaoLogica . TOR M TermoLogico

    TFPAR  shift, and go to state 104
    TAND   shift, and go to state 105
    TOR    shift, and go to state 106


State 65

   69 ExpressaoLogica: TermoLogico .

    $default  reduce using rule 69 (ExpressaoLogica)


State 66

   36 CmdEnquanto: TWHILE TAPAR ExpressaoLogica . TFPAR Bloco
   67 ExpressaoLogica: ExpressaoLogica . TAND M TermoLogico
   68                | ExpressaoLogica . TOR M TermoLogico

    TFPAR  shift, and go to state 107
    TAND   shift, and go to state 105
    TOR    shift, and go to state 106


State 67

   59 Fator: TSUB Fator .

    $default  reduce using rule 59 (Fator)


State 68

   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo
   58 Fator: TAPAR ExpressaoAritmetica . TFPAR

    TADD   shift, and go to state 69
    TSUB   shift, and go to state 70
    TFPAR  shift, and go to state 108


State 69

   51 ExpressaoAritmetica: ExpressaoAritmetica TADD . Termo

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    Termo  go to state 109
    Fator  go to state 44


State 70

   52 ExpressaoAritmetica: ExpressaoAritmetica TSUB . Termo

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    Termo  go to state 110
    Fator  go to state 44


State 71

   33 Retorno: TRETURN ExpressaoAritmetica TDOTCOMA .

    $default  reduce using rule 33 (Retorno)


State 72

   54 Termo: Termo TMUL . Fator

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    Fator  go to state 111


State 73

   55 Termo: Termo TDIV . Fator

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    Fator  go to state 112


State 74

   46 CmdLeitura: TREAD TAPAR TID . TFPAR TDOTCOMA

    TFPAR  shift, and go to state 113


State 75

   43 CmdEscrita: TPRINT P TAPAR . Tipagem TFPAR TDOTCOMA

    TSUB      shift, and go to state 38
    TAPAR     shift, and go to state 39
    TLITERAL  shift, and go to state 114
    TID       shift, and go to state 40
    TNUM      shift, and go to state 41

    ExpressaoAritmetica  go to state 115
    Termo                go to state 43
    Fator                go to state 44
    Tipagem              go to state 116


State 76

   44 CmdIncrementa: TID TADD TADD . TDOTCOMA

    TDOTCOMA  shift, and go to state 117


State 77

   40 CmdAtrib: TID TADD TATR . $@1 ExpressaoAritmetica TDOTCOMA

    $default  reduce using rule 39 ($@1)

    $@1  go to state 118


State 78

   45 CmdDecrementa: TID TSUB TSUB . TDOTCOMA

    TDOTCOMA  shift, and go to state 119


State 79

   48 ChamadaFuncao: TID TAPAR TFPAR . TDOTCOMA

    TDOTCOMA  shift, and go to state 120


State 80

   47 ChamadaFuncao: TID TAPAR ListParametros . TFPAR TDOTCOMA
   49 ListParametros: ListParametros . TCOMA ExpressaoAritmetica

    TFPAR  shift, and go to state 121
    TCOMA  shift, and go to state 122


State 81

   50 ListParametros: ExpressaoAritmetica .
   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo

    TADD  shift, and go to state 69
    TSUB  shift, and go to state 70

    $default  reduce using rule 50 (ListParametros)


State 82

   41 CmdAtrib: TID TATR TLITERAL . TDOTCOMA

    TDOTCOMA  shift, and go to state 123


State 83

   47 ChamadaFuncao: TID . TAPAR ListParametros TFPAR TDOTCOMA
   48              | TID . TAPAR TFPAR TDOTCOMA
   57 Fator: TID .

    TAPAR  shift, and go to state 49

    $default  reduce using rule 57 (Fator)


State 84

   42 CmdAtrib: TID TATR ChamadaFuncao .

    $default  reduce using rule 42 (CmdAtrib)


State 85

   38 CmdAtrib: TID TATR ExpressaoAritmetica . TDOTCOMA
   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo

    TADD      shift, and go to state 69
    TSUB      shift, and go to state 70
    TDOTCOMA  shift, and go to state 124


State 86

   21 Bloco: TACHA ListCmd . TFCHA
   22 ListCmd: ListCmd . Comando

    TIF      shift, and go to state 11
    TWHILE   shift, and go to state 12
    TRETURN  shift, and go to state 13
    TREAD    shift, and go to state 14
    TPRINT   shift, and go to state 15
    TFCHA    shift, and go to state 125
    TID      shift, and go to state 16
    TDO      shift, and go to state 17

    Comando        go to state 58
    Retorno        go to state 23
    CmdSe          go to state 24
    CmdEnquanto    go to state 25
    CmdAtrib       go to state 26
    CmdEscrita     go to state 27
    CmdIncrementa  go to state 28
    CmdDecrementa  go to state 29
    CmdLeitura     go to state 30
    ChamadaFuncao  go to state 31


State 87

   37 CmdEnquanto: TDO Bloco TWHILE . TAPAR ExpressaoLogica TFPAR TDOTCOMA

    TAPAR  shift, and go to state 126


State 88

   12 BlocoPrincipal: TACHA Declaracoes ListCmd TFCHA .

    $default  reduce using rule 12 (BlocoPrincipal)


State 89

   16 Declaracao: Tipo ListId TDOTCOMA .

    $default  reduce using rule 16 (Declaracao)


State 90

   19 ListId: ListId TCOMA . TID

    TID  shift, and go to state 127


State 91

    6 Funcao: TipoRetorno TID TAPAR TFPAR . BlocoPrincipal

    TACHA  shift, and go to state 4

    BlocoPrincipal  go to state 128


State 92

    5 Funcao: TipoRetorno TID TAPAR DeclParametros . TFPAR BlocoPrincipal
    9 DeclParametros: DeclParametros . TCOMA Parametro

    TFPAR  shift, and go to state 129
    TCOMA  shift, and go to state 130


State 93

   10 DeclParametros: Parametro .

    $default  reduce using rule 10 (DeclParametros)


State 94

   11 Parametro: Tipo . TID

    TID  shift, and go to state 131


State 95

   51 ExpressaoAritmetica: ExpressaoAritmetica . TADD Termo
   52                    | ExpressaoAritmetica . TSUB Termo
   58 Fator: TAPAR ExpressaoAritmetica . TFPAR
   61 ExpressaoRelacional: ExpressaoAritmetica . TBIG ExpressaoAritmetica
   62                    | ExpressaoAritmetica . TSMALL ExpressaoAritmetica
   63                    | ExpressaoAritmetica . TBIGEQUAL ExpressaoAritmetica
   64                    | ExpressaoAritmetica . TSMALLEQUAL ExpressaoAritmetica
   65                    | ExpressaoAritmetica . TEQUAL ExpressaoAritmetica
   66                    | ExpressaoAritmetica . TNEQUAL ExpressaoAritmetica

    TADD         shift, and go to state 69
    TSUB         shift, and go to state 70
    TFPAR        shift, and go to state 108
    TEQUAL       shift, and go to state 98
    TNEQUAL      shift, and go to state 99
    TBIG         shift, and go to state 100
    TSMALL       shift, and go to state 101
    TBIGEQUAL    shift, and go to state 102
    TSMALLEQUAL  shift, and go to state 103


State 96

   67 ExpressaoLogica: ExpressaoLogica . TAND M TermoLogico
   68                | ExpressaoLogica . TOR M TermoLogico
   71 TermoLogico: TAPAR ExpressaoLogica . TFPAR

    TFPAR  shift, and go to state 132
    TAND   shift, and go to state 105
    TOR    shift, and go to state 106


State 97

   70 TermoLogico: TNOT TermoLogico .

    $default  reduce using rule 70 (TermoLogico)


State 98

   65 ExpressaoRelacional: ExpressaoAritmetica TEQUAL . ExpressaoAritmetica

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 133
    Termo                go to state 43
    Fator                go to state 44


State 99

   66 ExpressaoRelacional: ExpressaoAritmetica TNEQUAL . ExpressaoAritmetica

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 134
    Termo                go to state 43
    Fator                go to state 44


State 100

   61 ExpressaoRelacional: ExpressaoAritmetica TBIG . ExpressaoAritmetica

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41

    ExpressaoAritmetica  go to state 135
    Termo                go to state 43
    Fator                go to state 44


State 101

   62 ExpressaoRelacional: ExpressaoAritmetica TSMALL . ExpressaoAritmetica

    TSUB   shift, and go to state 38
    TAPAR  shift, and go to state 39
    TID    shift, and go to state 40
    TNUM   shift, and go to state 41
